fix: adjust margins in dropdown for proper alignment

--- a/src/components/extras/navbar.scss
+++ b/src/components/extras/navbar.scss
@@ -69,11 +69,13 @@
 
         &:hover {
             .menu-item-dropdown {
+                padding-top: 12px;
                 opacity: 1;
                 visibility: visible;
                 transition: opacity 0.2s ease-in-out,
                     visibility 0.2s ease-in-out, transform 0.2s ease-in-out,
                     -webkit-transform 0.2s ease-in-out;
+                    height: fit-content;
             }
         }
 
@@ -113,6 +115,10 @@
         }
 
         .menu-item-dropdown {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
             position: absolute;
             top: 2.5rem;
             width: 11rem;
@@ -137,6 +143,7 @@
             }
 
             ul {
+                align-self: center;
                 padding: 1.5625rem 1.875rem;
             }
 
